--- a/toy_autoencoder.ipynb
+++ b/toy_autoencoder.ipynb
@@ -72,7 +72,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -558,10 +557,11 @@
     }
    ],
    "source": [
-    "# Remove time column, and the categorical columns for simplicity\n",
+    "# Temporary fix - paving road for future\n",
     "df = df_shifted\n",
     "\n",
-    "# Keep a small subset\n",
+    "\n",
+    "# Keep a small subset - becasue i need to a big sample so i ignore variables that have a lot missing values.\n",
     "df = df[['y', 'year', 'gdp', 'cpi', #'iy',\n",
     "         #'narrowm',\n",
     "         'money',\n",
@@ -1018,13 +1018,7 @@
       "923/923 [==============================] - 0s 13us/step - loss: 0.0154 - accuracy: 0.6132 - val_loss: 0.0146 - val_accuracy: 0.6061\n",
       "Epoch 54/200\n",
       "923/923 [==============================] - 0s 12us/step - loss: 0.0154 - accuracy: 0.6132 - val_loss: 0.0146 - val_accuracy: 0.6061\n",
-      "Epoch 55/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 55/200\n",
       "923/923 [==============================] - 0s 14us/step - loss: 0.0154 - accuracy: 0.6132 - val_loss: 0.0146 - val_accuracy: 0.6061\n",
       "Epoch 56/200\n",
       "923/923 [==============================] - 0s 15us/step - loss: 0.0154 - accuracy: 0.6132 - val_loss: 0.0146 - val_accuracy: 0.6061\n",
@@ -1254,13 +1248,7 @@
       "923/923 [==============================] - 0s 13us/step - loss: 0.0154 - accuracy: 0.6132 - val_loss: 0.0145 - val_accuracy: 0.6061\n",
       "Epoch 166/200\n",
       "923/923 [==============================] - 0s 12us/step - loss: 0.0154 - accuracy: 0.6132 - val_loss: 0.0145 - val_accuracy: 0.6061\n",
-      "Epoch 167/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 167/200\n",
       "923/923 [==============================] - 0s 12us/step - loss: 0.0154 - accuracy: 0.6132 - val_loss: 0.0145 - val_accuracy: 0.6061\n",
       "Epoch 168/200\n",
       "923/923 [==============================] - 0s 12us/step - loss: 0.0154 - accuracy: 0.6132 - val_loss: 0.0145 - val_accuracy: 0.6061\n",
